--- a/.github/workflows/docker-build-push.yaml
+++ b/.github/workflows/docker-build-push.yaml
@@ -6,15 +6,17 @@ on:
       repo-name:
         required: true
         type: string
-      username:
-        required: true
+      tag:
         type: string
-      password:
-        required: true
-        type: string
-    secrets:
-      token:
-        required: true
+      # username:
+      #   required: true
+      #   type: string
+      # password:
+      #   required: true
+      #   type: string
+    # secrets:
+    #   token:
+    #     required: true
 
 jobs:
   run-docker:
@@ -27,10 +29,14 @@ jobs:
         run: |
           echo "branch: ${{ needs.variables.outputs.branch }}"
 
-      # - name: Build Docker image
-      #   run: |
-      #     docker build -t my-docker-image .
+      - name: Login to the Registry
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.USERNAME }}
+          password: ${{ secrets.PASSWORD }}
 
+      # - name: Set the tag
+      #   run:
 # on:
 #   push:
 #     branches:
