--- a/.github/workflows/reusable_docker_build_push.yaml
+++ b/.github/workflows/reusable_docker_build_push.yaml
@@ -21,30 +21,6 @@ on:
         description: Docker Build arguments
         required: false
         type: string
-      # DOCKER_FILE_LOCATION:
-      #   required: true
-      #   type: string
-      # VERACODE_CLI_VERSION:
-      #   required: true
-      #   type: string
-      # TERRAFORM_VERSION:
-      #   required: true
-      #   type: string
-      # KUBE_VERSION:
-      #   required: true
-      #   type: string
-      # HELM_VERSION:
-      #   required: true
-      #   type: string
-      # AWS_VERSION:
-      #   required: true
-      #   type: string
-      # YQ_VERSION:
-      #   required: true
-      #   type: string
-      # DOCKER_TAG_VERSION:
-      #   required: true
-      #   type: string
 
     secrets:
       REPO_NAME:
@@ -81,6 +57,11 @@ jobs:
             echo "${{ inputs.BUILD_ARGS }}"
             echo EOF
           } >> "$GITHUB_ENV"
+
+      - name: look where I am
+        run: |
+          echo $PWD
+          ls -al .
 
       - name: Build and Push by digest
         id: build
