--- a/.github/workflows/reusable_docker_build_push.yaml
+++ b/.github/workflows/reusable_docker_build_push.yaml
@@ -40,6 +40,9 @@ jobs:
   build-push:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout source code
+        uses: actions/checkout@v4
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
