--- a/.github/workflows/reusable_docker_build_push.yaml
+++ b/.github/workflows/reusable_docker_build_push.yaml
@@ -18,9 +18,14 @@ on:
         description: "Dockerfile"
         required: false
         type: string
-      DOCKER_TAG_VERSION:
+      DOCKER_REPO:
         default: ""
-        description: "Docker tag"
+        description: "Docker repository path"
+        required: true
+        type: string
+      DOCKER_TAG:
+        default: ""
+        description: "Docker image tag"
         required: true
         type: string
       BUILD_ARGS:
@@ -69,7 +74,7 @@ jobs:
           context: .
           file: ${{ inputs.DOCKER_FILE_LOCATION }}
           platforms: ${{ inputs.TARGETOS }}/${{ inputs.TARGETARCH }}
-          tags: ${{ inputs.DOCKER_TAG_VERSION }}
+          tags: ${{ inputs.DOCKER_REPO }}/${{ inputs.DOCKER_TAG_VERSION }}
           push: true
           build-args: |
             ${{ inputs.BUILD_ARGS }}
